kubeadm/ghost/ghost-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:4
        ports:
        - containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghost-content
      volumes:
      - name: ghost-content
        persistentVolumeClaim:
         claimName: ghost-pvc

---

kind: Service
apiVersion: v1
metadata:
  name: ghost-svc
spec:
  selector:
    app: ghost
  ports:
    - port: 2368 # Default port for image
