kubeadm/ghost/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-content
      volumes:
      - name: mysql-content
        persistentVolumeClaim:
         claimName: mysql-pvc
---

kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
    - port: 3306 # Default port for image
