kubeadm/ghost/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ghost.local
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost-svc
          servicePort: 2368
